# maya_mcp

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  TOOLS.md  pyproject.toml
.github/workflows/: test.yml
docs/: IMPLEMENTATION_STATUS.md  MISSING_FUNCTIONALITY.md
examples/: start_in_maya.py
src/py/maya_mcp/: __init__.py  __main__.py  _safety.py  server.py
src/py/maya_mcp/prompts/: __init__.py
src/py/maya_mcp/resources/: __init__.py
src/py/maya_mcp/tools/: __init__.py  animation.py  animation_layers.py  attributes.py  cameras.py  constraints.py  deformers.py  display.py  display_layers.py  file.py  lights.py  materials.py  mesh.py  mesh_editing.py  nurbs.py  objects.py  paint.py  query.py  rendering.py  rigging.py  scene.py  sets.py  skinning.py  transform.py  usd.py  uv.py
tests/: __init__.py  conftest.py  test_helpers.py  test_safety.py  test_server.py  test_tools_animation_advanced.py  test_tools_animation_curves.py  test_tools_animation_extended.py  test_tools_animation_layers.py  test_tools_attributes.py  test_tools_cameras.py  test_tools_cameras_extended.py  test_tools_constraints.py  test_tools_constraints_extended.py  test_tools_deformers.py  test_tools_deformers_additional.py  test_tools_deformers_extended.py  test_tools_display_layers.py  test_tools_lights.py  test_tools_materials.py  test_tools_materials_extended.py  test_tools_materials_shaders.py  test_tools_mesh_editing.py  test_tools_mesh_editing_extended.py  test_tools_mesh_editing_polygon_ops.py  test_tools_nurbs.py  test_tools_nurbs_extended.py  test_tools_objects.py  test_tools_paint.py  test_tools_query.py  test_tools_rendering.py  test_tools_scene.py  test_tools_sets.py  test_tools_transform.py  test_tools_usd.py  update_all_tests.py
